syntax = "proto3";
package uyujoy.api.paasim.frontend;
option go_package = "uyujoy.com/pass/protogen/api/paasim/frontend;paasim";

/*
  paas 平台 im的媒体消息结构
*/

message mediaRecord {
  uint32 mediaType = 1; //1. image 2.audio 3.video 4.name card 5.file 6.location 7.sticker,
  bytes thumbnailBlur = 2;//模糊显示
  bytes mediaContent = 3;
  bool encrypted = 4;//true加密文件
}

//图片
message mediaImage{
  mediaImagePreview preview = 1;
  mediaImageOrigin origin = 2;// 可能没有原图
  string name = 3; //名称
  string ext = 4;//后缀
}

//预览图片
message mediaImagePreview{
  int64 fid = 1;//图片id
  uint32  size = 2;//大小
  string hash = 3;//验证哈希
  string url = 4;
  int32 height = 5;
  int32 wight = 6;
}


//原始图片,可能比较大(30M以内)
message mediaImageOrigin{
  int64 fid = 1;//图片id
  uint32  size = 2;//大小
  string hash = 3;//验证哈希
  string url = 4;
  int32 height = 5;
  int32 wight = 6;
}

message mediaAudio{
  int64 fid = 1;//音频id
  string extName = 2;
  uint32 size = 3;
  string name = 4;
  uint32 timeLen = 5;
  string hash = 6;
  string url = 7;
}

message mediaVideo{
  int64 fid = 1;//视频id
  string extName = 2;
  uint32 size = 3;
  string name = 4;
  uint32 height = 5;
  uint32 wight = 6;
  uint32 timeLen = 7;
  string url = 8;
  string hash = 9;
}

message mediaNameCard{
  string uid = 1;
  string batId = 2;
  string name = 3;
  string avatar = 4;
}

message mediaFile{
  int64 fid = 1;//图片id
  string extName = 2;
  string name = 3;
  uint32 size = 4;
  string hash = 5;
}

message mediaLocation{
  double latitude = 1;
  double longitude = 2;
  string title = 3;
  string subtitle = 4;
}

message mediaSticker{
  uint32 setId = 1;
  uint32 stickerId = 2;
}

message photo{
  mediaImagePreview preview = 1;
  mediaImageOrigin origin = 2;
  string oldPhoto = 3;
}
